--- a/src/app/form-preview/form-preview.component.html
+++ b/src/app/form-preview/form-preview.component.html
@@ -1,1 +1,10 @@
-<p>form-preview works!</p>
+<div class="card mx-2" style="width: 14rem; float: left">
+    <div class="card-body">
+        <h5 class="card-title">{{data.lastname}}, {{data.firstname}}</h5>
+        <div class="card-text">
+            <p>{{data.age}} - {{data.gender}}</p>
+            <p>Symptoms:<br>{{data.symptoms}}</p>
+        </div>
+        <button class="btn btn-danger">Patient Cleared</button>
+    </div>
+</div>
