--- a/src/app/title-bar/title-bar.component.html
+++ b/src/app/title-bar/title-bar.component.html
@@ -1,1 +1,16 @@
-<p>title-bar works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+        <a class="navbar-brand" href="#">QuickER</a>
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item">
+            <a class="nav-link" href="#">Pysician View</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Patient View</a>
+        </li>
+        </ul>
+    </div>
+</nav>
