--- a/src/app/form-create/form-create.component.html
+++ b/src/app/form-create/form-create.component.html
@@ -1,3 +1,16 @@
-<div>
-    Put form inputs here
+<div class="card">
+    <div class="card-body">
+        <h5 class="card-title">
+            New Patient
+        </h5>
+        <div class="card-text">
+            <p>Please fill out the following form so we can help serve you as fast as possible</p>
+            <div class="input-group">
+                    <input type="text" placeholder="First Name">
+                </div>
+                <div class="input-group">
+                        <input type="text" placeholder="First Name">
+                    </div>
+        </div>
+    </div>
 </div>
