--- a/src/app/title-bar/title-bar.component.html
+++ b/src/app/title-bar/title-bar.component.html
@@ -6,10 +6,10 @@
         <a class="navbar-brand" href="#">QuickER</a>
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
-            <a class="nav-link" href="#">Pysician View</a>
+            <button class="btn nav-link" (click)="setView('physician')">Pysician View</button>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Patient View</a>
+            <button class="btn nav-link" (click)="setView('patient')">Patient View</button>
         </li>
         </ul>
     </div>
