Integrated Firebase into physician view

--- a/src/app/form-preview/form-preview.component.html
+++ b/src/app/form-preview/form-preview.component.html
@@ -5,6 +5,6 @@
             <p>{{data.age}} - {{data.gender}}</p>
             <p>Symptoms:<br>{{data.symptoms}}</p>
         </div>
-        <button class="btn btn-danger">Patient Cleared</button>
+        <button class="btn btn-danger" (click)="delete()">Patient Cleared</button>
     </div>
 </div>
