Filled out the patient form. Including: Name, Age, Address, Telephone Number, Race, Sex, Reason for visit, and Pain Level Rating.

--- a/src/app/title-bar/title-bar.component.html
+++ b/src/app/title-bar/title-bar.component.html
@@ -6,7 +6,7 @@
         <a class="navbar-brand" href="#">QuickER</a>
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
-            <button class="btn nav-link" (click)="setView('physician')">Pysician View</button>
+            <button class="btn nav-link" (click)="setView('physician')">Physician View</button>
         </li>
         <li class="nav-item">
             <button class="btn nav-link" (click)="setView('patient')">Patient View</button>
