--- a/src/app/form-create/form-create.component.html
+++ b/src/app/form-create/form-create.component.html
@@ -1,16 +1,126 @@
-<div class="card">
+    <div class="mb-2"></div>
+    <h5 class="card-title md-3">PATIENT REGISTRATION FORM</h5>
+    <div class="card">
     <div class="card-body">
-        <h5 class="card-title">
-            New Patient
-        </h5>
-        <div class="card-text">
-            <p>Please fill out the following form so we can help serve you as fast as possible</p>
-            <div class="input-group">
-                    <input type="text" placeholder="First Name">
-                </div>
-                <div class="input-group">
-                        <input type="text" placeholder="First Name">
-                    </div>
+    <form>
+    <div class="form-row">
+    <div class="form-group col-md-3">
+    <label for="inputFirst Name">First Name</label>
+    <input type="string" class="form-control" id="First Name">
+    </div>
+    <div class="form-group col-md-3">
+    <label for="inputLastName">Last Name</label>
+    <input type="string"  class="form-control" id="inputLastName">
+    </div>
+    <div class="form-group col-md-3">
+            <label for="inputPreferred Name">Preferred Name</label>
+            <input type="string" class="form-control" id="inputPreferred Name">
+            </div>
+    <form>
+    <fieldset>
+        <div class="form-group" style="width: 10rem;">
+        <label for="Select">Race</label>
+        <select id="Select" class="form-control">
+            <option>Select</option>
+            <option>White</option>
+            <option>American Indian or Alaska Native</option>
+            <option>Asian</option>
+            <option>Black or African American</option>
+            <option>Native Hawaiian or Other Pacific Islander</option>
+            <option>Other</option>
+        </select>
+        </div>
+        <div class="form-group">
+        <div class="form-check">
+        </div>
+        </div>
+    </fieldset>
+    </form>
+    <div class="form-group col-md-1" style="width: 5rem;">
+            <label for="inputAge">Age</label>
+            <input type="number" min=0 class="form-control" id="inputAge">
+            </div>
+    <div class="form-group col-md-2">
+            <label for="inputSex">Sex</label>
+            <input type="string" class="form-control" id="inputSex">
+            </div>
+    <div class="form-group col-md-2">
+            <label for="inputTelephone">Telephone</label>
+            <input type="Telephone" class="form-control" id="inputTelephone" placeholder="Cell (   ) ___ - ____" >
+            </div>
+    </div>
+    <div class="form-group">
+    <label for="inputAddress">Address</label>
+    <input type="text" class="form-control" id="inputAddress">
+    </div>
+    <div class="form-group">
+    </div>
+    <div class="form-row">
+    <div class="form-group col-md-6">
+    <label for="inputCity">City</label>
+    <input type="text" class="form-control" id="inputCity">
+    </div>
+    <div class="form-group col-md-4">
+    <label for="inputState">State</label>
+    <select id="inputState" class="form-control">
+    <option selected>Choose...</option>
+    <option>...</option>
+    </select>
+    </div>
+    <div class="form-group col-md-2">
+    <label for="inputZip">Zip</label>
+    <input type="text" class="form-control" id="inputZip">
+    </div>
+    <div class="form-group" style= "width:77.25rem;">
+            <label for="inputExplain:">Describe Reason For Your Visit:</label>
+            <input type="Explain" class="form-control" id="inputExplain:">
+            </div>
+    </div>
+        <div class="form-group">
+        <div class="form-check">
         </div>
     </div>
-</div>
+    </form>
+
+    <div class="card" style="width: 77.25rem;">
+            <div class="card-body">
+              <h5 class="card-title">Pain Scale</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Match Pain Level to Symptoms</h6>
+                <!-- Rating Lables-->
+            <form>
+                <div class="d-inline p-1 white">0 - 1 No Pain</div>
+                <div class="d-inline p-1 white">1 - 3 Mild Pain</div>
+                <div class="d-inline p-1 white">3 - 5 Moderate Pain</div>
+                <div class="d-inline p-1 white">5 - 7 Mildly Severe Pain</div>
+                <div class="d-inline p-1 white">7 - 9 Severe Pain</div>
+                <div class="d-inline p-1 white">9 - 10 Very Severe Pain</div>
+            </form>
+            <div class="mb-2"></div>
+            <h5 class="card-title mb-2">Rate Your Current Pain Level</h5>
+            <form>
+                    <form>
+                            <div class="form-row align-items-center">
+                              <div class="col-auto my-1">
+                                <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
+                                <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                                  <option selected>Select..</option>
+                                  <option style="color:#005e80"value="0">Level 0</option>
+                                  <option style="color:#0083b3"value="1">Level 1</option>
+                                  <option style="color:#7fba00"value="2">Level 2</option>
+                                  <option style="color:#00b032"value="3">Level 3</option>
+                                  <option style="color:#00a86e"value="4">Level 4</option>
+                                  <option style="color:#0cad00"value="5">Level 5</option>
+                                  <option style="color:#dad600"value="6">Level 6</option>
+                                  <option style="color:#ffd000"value="7">Level 7</option>
+                                  <option style="color:#ff8400"value="8">Level 8</option>
+                                  <option style="color:#ff0000" value="9">Level 9</option>
+                                  <option style="color:#c42f02"value="10">Level 10</option>
+                                </select>
+                              </div>
+                            </div>
+                       </form>
+            </form>
+            </div>
+        </div>
+            </div>
+         
